@startuml

title __APPLICATION's Class Diagram__\n

  package application {
    class CoreConfiguration {
        + restTemplate()
    }
  }
  

  package application {
    class FaceBio {
        - id : long
        - code : int
        - firstName : String
        - lastName : String
        - age : long
        + FaceBio()
        + setId()
        + setCode()
        + setFirstName()
        + setLastName()
        + setAge()
        + getId()
        + getCode()
        + getFirstName()
        + getLastName()
        + getAge()
        + FaceBio()
    }
  }

  package application {
    class FaceBioPhoto {
        - id : long
        - name : String
        - image : String
        + FaceBioPhoto()
        + setId()
        + setName()
        + setImage()
        + getId()
        + getName()
        + getImage()
        + FaceBioPhoto()
    }
  }
  

  package application {
    class FaceDetector {
        - grabberConverter : ToIplImage
        - frameConverter : Java2DFrameConverter
        - output : List<String>
        - bufferedImage : BufferedImage
        - count : int
        + classifierName : String
        + classifierFile : File
        + isSavingPossible : boolean
        + isFaceRecognized : boolean
        - isStopped : boolean
        - mainHaarClassifier : CvHaarClassifierCascade
        - sideFaceHaarClassifier : CvHaarClassifierCascade
        - restTemplate : RestTemplate
        - gson : Gson
        - gsonString : String
        + cvMemStorage : CvMemStorage
        - newCameraGrabber : FrameGrabber
        - imageGrabbedFromCamera : IplImage
        - temporaryImage : IplImage
        - grayImage : IplImage
        - reducedImage : IplImage
        + frames : ImageView
        - facesSequence : CvSeq
        ~ codeForAPerson : int
        + code : int
        + age : int
        + firstName : String
        + lastName : String
        + init()
        + start()
        + run()
        + stop()
        - setMainHaarClassifier()
        - setSideFaceHaarClassifier()
    }
  }
  

  package application {
    class LoaderAndTrainer {
        - lbphFaceRecognizer : LBPHFaceRecognizer
        - mainRoot : File
        - matVectorImages : MatVector
        - recognitionLabels : Mat
        - faceBioPhotoList : List<FaceBioPhoto>
        - photoAsByte : byte[]
        - temp : IplImage
        - restTemplate : RestTemplate
        + init()
        + recognize()
        + compareNames()
        + convertAndSave()
    }
  }
  

  package application {
    class Main {
        - springContext : ConfigurableApplicationContext
        - rootNode : Parent
        - fxmlLoader : FXMLLoader
        + init()
        + start()
        {static} + main()
        + stop()
    }
  }
  

  package application {
    class NamesWrapperDto {
        - namesList : List<String>
        + setNamesList()
        + getNamesList()
        + NamesWrapperDto()
    }
  }
  

  package application {
    class SampleController {
        + pathToFile : String
        - startCameraButton : Button
        - stopButton : Button
        - saveButton : Button
        - recogniseFaceButton : Button
        - stopRecognitionButton : Button
        - imageView : ImageView
        - dataPane : TitledPane
        - firstName : TextField
        - lastName : TextField
        - code : TextField
        - age : TextField
        + listWithLogs : ListView<String>
        + dataOutputList : ListView<String>
        + informationAboutSavingLabel : Label
        + missingDataError : Label
        + title : Label
        + tilePane : TilePane
        + personalDataPanel : AnchorPane
        - newPerson : List<String>
        - newImageRepresentation : ImageView
        - restTemplate : RestTemplate
        - gson : Gson
        - gsonString : String
        {static} + eventList : ObservableList<String>
        {static} + outEventList : ObservableList<String>
        - counter : int
        + showOnLog()
        # startCamera()
        # faceRecognise()
        # stopRecognise()
        # saveFace()
        # stopCam()
        - displayPhotos()
    }
  }
  

  FaceDetector o-- LoaderAndTrainer : newLoaderAndTrainer
  FaceDetector o- FaceBioPhoto : faceBioPhoto
  LoaderAndTrainer o- NamesWrapperDto : namesWrapperDto
  Main -up-|> FaceDetectionSystem
  SampleController o-- FaceDetector : newFaceDetector
  SampleController o-- FaceBio : faceBio


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
